{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 77,
  "lineage": "87883a94-f6d0-0e69-0a2b-3be596e86d20",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ruhi_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555044956356:internet-gateway/igw-0e94bf24be0c153db",
            "id": "igw-0e94bf24be0c153db",
            "owner_id": "555044956356",
            "tags": {
              "Name": "ruhi-igw"
            },
            "tags_all": {
              "Name": "ruhi-igw"
            },
            "vpc_id": "vpc-01fce2d52c2345385"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ruhi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555044956356:route-table/rtb-02c53cebdb4b0da06",
            "id": "rtb-02c53cebdb4b0da06",
            "owner_id": "555044956356",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e94bf24be0c153db",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ruhi-public-rt"
            },
            "tags_all": {
              "Name": "ruhi-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01fce2d52c2345385"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ruhi_igw",
            "aws_vpc.ruhi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062030647757566f3",
            "route_table_id": "rtb-02c53cebdb4b0da06",
            "subnet_id": "subnet-0db87c65f8809532e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ruhi_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.ruhi_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f51cb4a7d7955939",
            "route_table_id": "rtb-02c53cebdb4b0da06",
            "subnet_id": "subnet-035521388b39427bf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ruhi_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.ruhi_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555044956356:security-group/sg-0f30e3f5a65d93a11",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f30e3f5a65d93a11",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ruhi-vpce-sg-20260915083346262400000002",
            "name_prefix": "ruhi-vpce-sg-",
            "owner_id": "555044956356",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01fce2d52c2345385"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ruhi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555044956356:subnet/subnet-018bafa8ac2560a8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018bafa8ac2560a8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "555044956356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ruhi-private-subnet-0"
            },
            "tags_all": {
              "Name": "ruhi-private-subnet-0"
            },
            "vpc_id": "vpc-01fce2d52c2345385"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ruhi_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555044956356:subnet/subnet-0958908f9a20e4f36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0958908f9a20e4f36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "555044956356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ruhi-private-subnet-1"
            },
            "tags_all": {
              "Name": "ruhi-private-subnet-1"
            },
            "vpc_id": "vpc-01fce2d52c2345385"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ruhi_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555044956356:subnet/subnet-0db87c65f8809532e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db87c65f8809532e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "555044956356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ruhi-public-subnet-0"
            },
            "tags_all": {
              "Name": "ruhi-public-subnet-0"
            },
            "vpc_id": "vpc-01fce2d52c2345385"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ruhi_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555044956356:subnet/subnet-035521388b39427bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035521388b39427bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "555044956356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ruhi-public-subnet-1"
            },
            "tags_all": {
              "Name": "ruhi-public-subnet-1"
            },
            "vpc_id": "vpc-01fce2d52c2345385"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ruhi_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ruhi_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555044956356:vpc/vpc-01fce2d52c2345385",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01c10c67ae0385790",
            "default_route_table_id": "rtb-04fd826b4f357c88f",
            "default_security_group_id": "sg-035d4ab7e55765311",
            "dhcp_options_id": "dopt-06d9548f7eff3015c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01fce2d52c2345385",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04fd826b4f357c88f",
            "owner_id": "555044956356",
            "tags": {
              "Name": "ruhi-eks-vpc"
            },
            "tags_all": {
              "Name": "ruhi-eks-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555044956356:vpc-endpoint/vpce-076b2d418ffb74222",
            "dns_entry": [
              {
                "dns_name": "vpce-076b2d418ffb74222-wf7boqwa.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-076b2d418ffb74222-wf7boqwa-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-076b2d418ffb74222-wf7boqwa-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0744126HJNZH06STFP0"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z10205861D46GW9WG3X8U"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-076b2d418ffb74222",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0119f208a7e202a69",
              "eni-074c23b2fcadb9f01"
            ],
            "owner_id": "555044956356",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f30e3f5a65d93a11"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.0.129",
                "subnet_id": "subnet-0db87c65f8809532e"
              },
              {
                "ipv4": "10.0.1.224",
                "subnet_id": "subnet-035521388b39427bf"
              }
            ],
            "subnet_ids": [
              "subnet-035521388b39427bf",
              "subnet-0db87c65f8809532e"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01fce2d52c2345385"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoint_sg",
            "aws_subnet.public",
            "aws_vpc.ruhi_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555044956356:vpc-endpoint/vpce-0b74d1b38f72aa141",
            "dns_entry": [
              {
                "dns_name": "vpce-0b74d1b38f72aa141-9ztwxa7i.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b74d1b38f72aa141-9ztwxa7i-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b74d1b38f72aa141-9ztwxa7i-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07425012GF1D71J1UH60"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07425012GF1D71J1UH60"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z074535920GFIPN7MWFN6"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z074535920GFIPN7MWFN6"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b74d1b38f72aa141",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01694017970d44ea8",
              "eni-0293b19ef27bb14f2"
            ],
            "owner_id": "555044956356",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f30e3f5a65d93a11"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.0.62",
                "subnet_id": "subnet-0db87c65f8809532e"
              },
              {
                "ipv4": "10.0.1.168",
                "subnet_id": "subnet-035521388b39427bf"
              }
            ],
            "subnet_ids": [
              "subnet-035521388b39427bf",
              "subnet-0db87c65f8809532e"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01fce2d52c2345385"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.vpc_endpoint_sg",
            "aws_subnet.public",
            "aws_vpc.ruhi_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555044956356:vpc-endpoint/vpce-0faf118f1ff97c73b",
            "cidr_blocks": [
              "16.15.160.0/19",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18",
              "16.15.156.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0faf118f1ff97c73b",
            "ip_address_type": "ipv4",
            "owner_id": "555044956356",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-02c53cebdb4b0da06"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-01fce2d52c2345385"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ruhi_igw",
            "aws_route_table.public_rt",
            "aws_vpc.ruhi_vpc"
          ]
        }
      ]
    }
  ]
}